# ParkingChatbot

./: .env.example  .gitignore  ARCHITECTURE.md  HOW_TO_TEST.md  INSTALLATION.md  QUICK_START.md  README.md  TESTING.md  TESTING_GUIDE.md  admin_cli.py  demo.py  docker-compose.yml  main.py  mcp_config.json  pyproject.toml  requirements.txt  test_init.py  test_mcp_server.py  test_rag.py  test_system.py
data/: parking.db
project_overview/: GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  SCRIPTS_SUMMARY.md  SETUP_GUIDE.md  START_HERE.md
reports/: ollama_llama2_7b_test_results_20260227_002635.md  ollama_llama2_7b_test_results_20260301_005700.md
src/: app.py  cli.py  config.py
src/admin/: __init__.py  admin_service.py
src/agents/: admin_agent.py  hitl_workflow.py  multi_agent_workflow.py  prompts.py  state.py  tools.py  workflow.py
src/api/: __init__.py  dashboard.py  models.py  notification.py  security.py  server.py
src/database/: milvus_db.py  pinecone_db.py  sql_db.py  weaviate_db.py
src/evaluation/: metrics.py  report.py  runner.py  test_data.py
src/guardrails/: filter.py
src/mcp/: __init__.py  reservation_server.py
src/rag/: embeddings.py  llm_provider.py  ollama_llm.py  retriever.py  sql_agent.py
src/services/: __init__.py  reservation_writer.py
src/utils/: logging.py
