[project]
name = "parking-chatbot"
version = "0.1.0"
description = "Intelligent parking chatbot with RAG, human-in-the-loop, and local LLM"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "langchain-community>=0.0.1",
    "langchain-text-splitters>=0.0.1",
    "weaviate-client>=3.26.0,<4",
    "sentence-transformers>=2.2.0",
    "ollama>=0.1.0",
    "pymilvus>=2.3.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
]
